First version of import