@@ -7,31 +7,63 @@
  */
 package org.seedstack.hub.rest;
 
+import org.hibernate.validator.constraints.NotBlank;
+import org.seedstack.business.assembler.AssemblerTypes;
+import org.seedstack.business.assembler.FluentAssembler;
+import org.seedstack.business.domain.Repository;
 import org.seedstack.business.view.Page;
 import org.seedstack.business.view.PaginatedView;
+import org.seedstack.hub.application.ImportService;
+import org.seedstack.hub.domain.model.component.Component;
+import org.seedstack.hub.domain.model.component.ComponentId;
+import org.seedstack.hub.domain.services.fetch.VCSType;
+import org.seedstack.seed.Logging;
 import org.seedstack.seed.rest.Rel;
 import org.seedstack.seed.rest.RelRegistry;
 import org.seedstack.seed.rest.hal.HalRepresentation;
 import org.seedstack.seed.rest.hal.Link;
+import org.slf4j.Logger;
 
 import javax.inject.Inject;
-import javax.ws.rs.*;
+import javax.ws.rs.BadRequestException;
+import javax.ws.rs.BeanParam;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.FormParam;
+import javax.ws.rs.GET;
+import javax.ws.rs.NotFoundException;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.WebApplicationException;
+import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.Optional;
 
 import static java.util.Optional.ofNullable;
 
 @Path("/components")
 public class ComponentResource {
-
     public static final String COMPONENTS = "components";
+    public static final String COMPONENT = "component";
 
     @Inject
     private ComponentFinder componentFinder;
     @Inject
+    private Repository<Component, ComponentId> componentRepository;
+    @Inject
     private RelRegistry relRegistry;
+    @Inject
+    private ImportService importService;
+    @Inject
+    private FluentAssembler fluentAssembler;
+    @Logging
+    private Logger logger;
 
     @Rel(value = COMPONENTS, home = true)
     @GET
@@ -39,10 +71,24 @@ public class ComponentResource {
     public HalRepresentation getList(@QueryParam("search") String searchName, @BeanParam PageInfo pageInfo,
                                      @QueryParam("sort") String sort) {
         PaginatedView<ComponentCard> paginatedView = componentFinder.findCards(pageInfo.page(), searchName, sort);
-        return buildHALRepresentation(paginatedView, searchName, pageInfo);
+        return buildListHALRepresentation(paginatedView, searchName, pageInfo);
     }
 
-    private HalRepresentation buildHALRepresentation(PaginatedView<ComponentCard> paginatedView, String searchName, PageInfo pageInfo) {
+    @Rel(value = COMPONENT, home = true)
+    @GET
+    @Path("/{componentId}")
+    @Produces({"application/json", "application/hal"})
+    public HalRepresentation getList(@PathParam("componentId") String componentId) {
+        Component component = componentRepository.load(new ComponentId(componentId));
+
+        if (component == null) {
+            throw new NotFoundException("Component " + componentId + " not found");
+        }
+
+        return fluentAssembler.assemble(component).with(AssemblerTypes.MODEL_MAPPER).to(ComponentDetails.class);
+    }
+
+    private HalRepresentation buildListHALRepresentation(PaginatedView<ComponentCard> paginatedView, String searchName, PageInfo pageInfo) {
         HalRepresentation halRepresentation = new HalRepresentation();
         halRepresentation.embedded(COMPONENTS, paginatedView.getView());
 
@@ -69,12 +115,28 @@ public class ComponentResource {
     }
 
     @POST
-    @Consumes({"application/json", "application/hal"})
-    public Response post(@FormParam("owner") String owner, @FormParam("url") String sourceUrl,
-                         @FormParam("icon") String componentIcon) throws URISyntaxException {
-        // TODO call a service
-        return Response.created(new URI(relRegistry.uri(COMPONENTS).expand())).build();
+    @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
+    @Produces({"application/json", "application/hal"})
+    public Response post(@FormParam("vcs") @NotBlank String vcs, @FormParam("url") @NotBlank String sourceUrl) throws URISyntaxException {
+        VCSType vcsType;
+        try {
+            vcsType = VCSType.valueOf(vcs.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            throw new BadRequestException("Unsupported VCS type " + vcs);
+        }
+
+        Component component;
+        try {
+            component = importService.importComponent(vcsType, new URL(sourceUrl));
+        } catch (MalformedURLException e) {
+            throw new BadRequestException("Malformed URL " + sourceUrl);
+        } catch (Exception e) {
+            logger.error("Error during component import", e);
+            throw new WebApplicationException(400);
+        }
+
+        ComponentCard componentCard = fluentAssembler.assemble(component).with(AssemblerTypes.MODEL_MAPPER).to(ComponentCard.class);
+
+        return Response.created(new URI(relRegistry.uri(COMPONENT).set("componentId", componentCard.getId()).expand())).entity(componentCard).build();
     }
-
-
 }
